--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Wedding Invitation</title>
+<title>Walimatul Urus | Azwir x Nani</title>
 <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Gentium+Book+Plus:wght@400;600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Amiri:wght@400;700&display=swap" rel="stylesheet">
 
 <style>
 :root{
   --bg: #F7F1E6;
-  --frame: #FFF9EF;
+  --frame: #F0F0F0;
   --border: #E9DDC8;
   --bar: #F2E6D3;
   --text: #3B342B;
@@ -41,7 +42,7 @@
 }
 
 /* Scroll Fade Animation */
-.section > *{
+.section > *:not(.itinerary-floral){
   opacity: 0;
   transform: translateY(20px);
   transition: opacity 0.8s ease, transform 0.8s ease;
@@ -205,9 +206,27 @@ body{
 }
 
 .section h1{
-  font-size: 18px;
-  font-weight: normal;
-  margin: 0 0 25px;
+  font-family: 'Amiri', serif;
+  font-size: clamp(15px, 5vw, 25px);
+  line-height: 2;
+  direction: rtl;
+  letter-spacing: 0.5px;
+
+
+  /* Subtle gold gradient */
+  color: transparent;
+  background: linear-gradient(
+    180deg,
+    #FBE8B5 0%,
+    #C9A227 30%,
+    #C9A227 70%,
+    #FBE8B5 100%
+  );
+  -webkit-background-clip: text;
+  background-clip: text;
+
+  /* Soft glow 
+  text-shadow: 0 4px 12px rgba(184,135,11,0.25);*/
 }
 
 .parents-names{
@@ -225,6 +244,21 @@ body{
   margin: 25px 0;
   line-height: 1.4;
   letter-spacing: 2px;
+
+  /* Subtle gold gradient */
+  color: transparent;
+  background: linear-gradient(
+    180deg,
+    #FBE8B5 0%,
+    #C9A227 15%,
+    #C9A227 85%,
+    #FBE8B5 100%
+  );
+  -webkit-background-clip: text;
+  background-clip: text;
+
+  /* Soft glow */
+  text-shadow: 0 4px 12px rgba(184,135,11,0.25);
 }
 
 .seasons-text{
@@ -274,9 +308,58 @@ body{
   position: relative;
   padding: 70px 28px;
   text-align: center;
-
-  background: url('upload/background/BG.png') center/cover no-repeat;
+  background: #F0F0F0;     /* clean base so it matches Section 2 */
   color: #3B342B;
+  overflow: hidden;        /* hides floral overflow nicely */
+}
+
+/* Floral side images for Section 3 */
+/* Floral side borders */
+.itinerary-floral{
+  position: absolute;
+  top: 0;
+  height: 100%;
+  width: auto;
+
+  max-width: 100px;   /* border width control */
+  object-fit: contain;
+
+  pointer-events: none;
+  user-select: none;
+  z-index: 0;
+
+  opacity: 0;                 /* start hidden */
+  transform: scale(1.5);     /* start slightly zoomed */
+  transition: opacity 1s ease, transform 1.16s ease;
+
+  filter: saturate(90%) brightness(100%);; /* soften intensity */
+}
+
+/* Left border */
+.itinerary-floral.left{
+  left: 0;
+}
+
+/* Right border */
+.itinerary-floral.right{
+  right: 0;
+}
+
+/* When section enters view */
+.itinerary-section.itinerary-inview .itinerary-floral{
+  opacity: 0.38;      /* reduced opacity */
+  transform: scale(1); /* zoom-out */
+}
+
+/* Make sure your content stays above florals */
+.itinerary-content{
+  position: relative;
+  z-index: 1;
+}
+
+/* Optional: softer florals */
+.itinerary-section.itinerary-inview .itinerary-floral{
+  opacity: 0.85;
 }
 
 /* Itinerary stagger fade */
@@ -292,7 +375,6 @@ body{
   opacity: 1;
   transform: translateY(0);
 }
-
 
 .itinerary-content{
   position: relative;
@@ -449,7 +531,7 @@ body{
   <!-- Section 2: Jemputan -->
   <section class="section">
 
-    <h1>With Joy and Gratitude to Almighty God</h1>
+    <h1>اَلسَلامُ عَلَيْكُم وَرَحْمَةُ اَللهِ وَبَرَكاتُهُ</h1>
 
     <div class="parents-names">
       ALLAHYARHAM HUSIN BIN TALAWIS<br>
@@ -505,6 +587,9 @@ body{
 
 <!-- Section 3: Itinerary -->
 <section class="itinerary-section section">
+
+  <img src="upload/design/Floral-Left.png" class="itinerary-floral left" alt="">
+  <img src="upload/design/Floral-Right.png" class="itinerary-floral right" alt="">
 
   <div class="itinerary-content">
 
@@ -648,6 +733,19 @@ document.addEventListener("DOMContentLoaded", function() {
         guestEl.classList.remove("is-fading");
       }, 650);
     }, 1500); // change speed here
+  }
+
+  // Section 3 floral enter/exit animation
+  const itinerarySection = document.querySelector(".itinerary-section");
+  if (itinerarySection){
+    const itineraryObserver = new IntersectionObserver((entries) => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) itinerarySection.classList.add("itinerary-inview");
+        else itinerarySection.classList.remove("itinerary-inview");
+      });
+    }, { threshold: 0.25 });
+
+    itineraryObserver.observe(itinerarySection);
   }
 
 });
