--- a/index.html
+++ b/index.html
@@ -112,17 +112,34 @@ body{
   animation: zoomOut 2.8s cubic-bezier(.22,.61,.36,1) forwards;
 }
 
-.hero .basmalah{
+.hero .basmalah-text{
   position: absolute;
   top: calc(100px + env(safe-area-inset-top));
   left: 50%;
   transform: translateX(-50%) translateY(15px);
 
-  width: 28%;
-  max-width: 280px;
-  height: auto;
+  font-family: 'Amiri', serif;
+  font-size: clamp(18px, 5vw, 28px);
+  line-height: 2;
+  direction: rtl;
+  white-space: nowrap;
 
   z-index: 2;
+
+  /* Subtle gold gradient */
+  color: transparent;
+  background: linear-gradient(
+    180deg,
+    #FBE8B5 0%,
+    #C9A227 30%,
+    #C9A227 70%,
+    #FBE8B5 100%
+  );
+  -webkit-background-clip: text;
+  background-clip: text;
+
+  text-shadow: 0 4px 12px rgba(184,135,11,0.25);
+
   opacity: 0;
   animation: basmalahIn 2s ease forwards;
   animation-delay: 0.5s;
@@ -186,7 +203,6 @@ body{
   font-size: clamp(12px, 3.5vw, 16px); /* adjustable size */
   letter-spacing: 4px;
 
-  color: rgba(255,255,255,0.85);
   color: transparent;
   background: linear-gradient(180deg, #FFF0A6 0%, #B8870B 25%, #B8870B 75%, #FFF0A6 100%);
   -webkit-background-clip: text;
@@ -347,19 +363,15 @@ body{
 
 /* When section enters view */
 .itinerary-section.itinerary-inview .itinerary-floral{
-  opacity: 0.38;      /* reduced opacity */
+  opacity: 1;      /* reduced opacity */
   transform: scale(1); /* zoom-out */
 }
 
 /* Make sure your content stays above florals */
 .itinerary-content{
+  padding: 0 28px;
   position: relative;
   z-index: 1;
-}
-
-/* Optional: softer florals */
-.itinerary-section.itinerary-inview .itinerary-floral{
-  opacity: 0.85;
 }
 
 /* Itinerary stagger fade */
@@ -516,7 +528,9 @@ body{
   <!-- Section 1: Muka Depan -->
   <section class="hero">
     <img src="upload/design/arch.png" alt="Wedding Arch" class="arch">
-    <img src="upload/design/basmalah.png" alt="Basmalah" class="basmalah">
+    <div class="basmalah-text">
+      بِسْمِ اللَّهِ الرَّحْمَنِ الرَّحِيمِ
+    </div>
     <div class="couple-names">
       <span>Nani</span>
       <span class="amp">&amp;</span>
@@ -574,13 +588,13 @@ body{
 
     <div class="date">
       <span class="seasons-text">Tarikh</span><br>
-      <strong class="gentium-text">Ahad, 12<sup></sup> April 2026<br>
+      <strong class="gentium-text">Ahad, 12 April 2026<br>
       24 Shawwal 1447H</strong>
     </div>
 
     <div class="time">
       <span class="seasons-text">Masa</span><br>
-      <strong class="gentium-text">11:00 AM - 5:00 PM</strong>
+      <strong class="gentium-text">11:00 AM - 4:00 PM</strong>
     </div>
 
   </section>
